# yomi

./: .gitignore  LICENSE  MANIFEST.in  README.md  c  pyproject.toml
tools/: raw-names.json
yomi/: __init__.py  cli.py  core.py  sites.json
yomi/extractors/: base.py  common.py
yomi/utils/: anilist.py  archive.py  metadata.py
